hard-gists/c4602c23783d894b8d96/run.log
=== Docker Run Log for c4602c23783d894b8d96 ===
Started at: Mi 29. Okt 19:52:56 CET 2025

[2025-10-29 19:52:57] START: Running container for c4602c23783d894b8d96
[2025-10-29 19:52:57] SUCCESS: Container 9281fc4a31f732319f70a0eaf1b9b131f48164d0457fcb0a0e9ac931b8ace7ae started for c4602c23783d894b8d96
=== Container logs for c4602c23783d894b8d96 ===
  File "/snippet.py", line 140
    print "   ", hpattern % tuple(headers)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c4602c23783d894b8d96 ===
[2025-10-29 19:52:59] INFO: Container 9281fc4a31f732319f70a0eaf1b9b131f48164d0457fcb0a0e9ac931b8ace7ae has stopped
